--- a/src/main/resources/templates/validation/v2/addForm.html
+++ b/src/main/resources/templates/validation/v2/addForm.html
@@ -22,26 +22,16 @@
     </div>
 
     <form action="item.html" th:action th:object="${item}" method="post">
-
-        <div th:if="${errors?.containsKey('globalError')}">
-            <p class="field-error" th:text="${errors['globalError']}">전체 오류 메세지</p>
+        <!--bindingResult 를 뷰 템플릿으로 가져오는 로직-->
+        <div th:if="${#fields.hasGlobalErrors()}">
+            <p class="field-error" th:each="err : ${#fields.globalErrors()}" th:text="${err}">전체 오류 메세지</p>
         </div>
-
         <div>
             <label for="itemName" th:text="#{label.item.itemName}">상품명</label>
-            <!--/*
-            1.자바의 조건식과 유사하다
-            th:() = "${(여기가 참이라면)?(실행):(참이아닐떄 실행)}"
-            3. Safe Navigation Operator
-            만약 여기에서 errors 가 null 이라면 ?
-            처음에 addForm 에 들어가자 마자 제출을 하면 errors 가 null 이 된다
-            errors? 에 .containsKey('...') 를해주면 NullPointerException 이 발생하는 대신에
-            null을 반환한다 .th 조건 속성에서는 null이면 실패로 처리된다
-            */-->
             <input type="text" id="itemName" th:field="*{itemName}"
-                   th:class="${errors?.containsKey('itemName')} ? 'form-control field-error': 'form-control'"
+                   th:errorclass="field-error" class="form-control" placeholder="이름을 입력하세요">
                    class="form-control" placeholder="이름을 입력하세요">
-            <div class="field-error" th:if="${errors?.containsKey('itemName')}" th:text="${errors['itemName']}">
+            <div class="field-error" th:error="*{itemName}">
                 상품명 오류
             </div>
         </div>
@@ -73,8 +63,9 @@
             <div class="col">
                 <button class="w-100 btn btn-secondary btn-lg"
                         onclick="location.href='items.html'"
-                        th:onclick="|location.href='@{/validation/v1/items}'|"
-                        type="button" th:text="#{button.cancel}">취소</button>
+                        th:onclick="|location.href='@{/validation/v2/items}'|"
+                        type="button" th:text="#{button.cancel}">취소
+                </button>
             </div>
         </div>
 
