--- a/src/main/resources/templates/validation/v2/addForm.html
+++ b/src/main/resources/templates/validation/v2/addForm.html
@@ -22,7 +22,10 @@
     </div>
 
     <form action="item.html" th:action th:object="${item}" method="post">
-        <!--bindingResult 를 뷰 템플릿으로 가져오는 로직-->
+        <!--bindingResult 를 뷰 템플릿으로 가져오는 로직
+        타임 리프의 th:field 는 매우 똑똑하게 동작하는데, 정상 상황에는 모델 객체의 값사용.
+        오류가 발생하면, FieldError 에서 보관한 값을 사용.
+        -->
         <div th:if="${#fields.hasGlobalErrors()}">
             <p class="field-error" th:each="err : ${#fields.globalErrors()}" th:text="${err}">전체 오류 메세지</p>
         </div>
