--- a/src/main/resources/templates/validation/v2/item.html
+++ b/src/main/resources/templates/validation/v2/item.html
@@ -44,16 +44,12 @@
         <div class="col">
             <button class="w-100 btn btn-primary btn-lg"
                     onclick="location.href='editForm.html'"
-                    th:onclick="|location.href='@{/validation/v2
-/items/{itemId}/edit(itemId=${item.id})}'|"
-                    type="button" th:text="#{page.updateItem}">상품 수정</button>
+                    th:onclick="|location.href='@{/validation/v2/items/{itemId}/edit(itemId=${item.id})}'|" type="button" th:text="#{page.updateItem}">상품 수정</button>
         </div>
         <div class="col">
             <button class="w-100 btn btn-secondary btn-lg"
                     onclick="location.href='items.html'"
-                    th:onclick="|location.href='@{/validation/v2
-/items}'|"
-                    type="button" th:text="#{button.cancel}">목록으로</button>
+                    th:onclick="|location.href='@{/validation/v2/items}'|" type="button" th:text="#{button.cancel}">목록으로</button>
         </div>
     </div>
 
